Fixed 1px spacing on SE TILBUDET button\n\niPhone doesn't handle well box-sizing:border-box and percentage values for boxes width. It's better to use content-box

--- a/ad.css
+++ b/ad.css
@@ -1,6 +1,6 @@
 
 * {
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 a, img {
@@ -101,6 +101,7 @@ img.ad {
   background: -moz-linear-gradient(top, #42BEF1, #3ca3ce);
   background: -ms-linear-gradient(top, #42BEF1, #3ca3ce);
   background: -o-linear-gradient(top, #42BEF1, #3ca3ce);
+
 }
 
 .btn-ad a {
@@ -108,6 +109,7 @@ img.ad {
   background-origin: content-box;
   padding-right: 20px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
+
   margin-left: -13px;
 }
 
